# libfabric-provider-dpa

./: .gitignore  AUTHORS  Makefile.am  Project.ede  README  autogen.sh  config.json  configure.ac  header.template
src/: Makefile.am  array.h  dpa.h  dpa_av.c  dpa_av.h  dpa_cm.c  dpa_cm.h  dpa_cntr.c  dpa_cntr.h  dpa_cq.c  dpa_cq.h  dpa_domain.c  dpa_domain.h  dpa_env.h  dpa_ep.c  dpa_ep.h  dpa_eq.c  dpa_eq.h  dpa_fabric.c  dpa_info.c  dpa_info.h  dpa_log.h  dpa_mr.c  dpa_mr.h  dpa_msg.c  dpa_msg.h  dpa_msg_cm.c  dpa_msg_cm.h  dpa_rma.c  dpa_rma.h  dpa_segments.h  dpa_utils.h  enosys.c  fi_ext_dpa.h  hash.h  list.h  locks.h
